--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["loichu <loic@humbert-web.dev>"]
 python = "^3.9"
 Django = "^4.0.3"
 djangorestframework = "^3.13.1"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
